--- a/index.html
+++ b/index.html
@@ -2,57 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="shortcut icon" href="./img/logo1.jpeg" type="image/x-icon">
-    <title>Mobilestop</title>
-    <script src="https://kit.fontawesome.com/a954ad0397.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,700;1,200&display=swap"
-        rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="shortcut icon" href="./img/logo1.jpeg" type="image/x-icon">
+  <title>Mobilestop</title>
+  <script src="https://kit.fontawesome.com/a954ad0397.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,700;1,200&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-    <header class="df-header">
-        <div class="logo">
-            <img class="logo-img" src="./img/logo1.jpeg">
-            <p class="CodoACodo"> Mobile Stop </p>
+  <header">
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img class="logo-img" src="./img/logo1.jpeg" alt="logo de celular con fondo amarillo" width="150px" height="100px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./pages/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Ver mas
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./pages/quienes-somos.html">Sobre nosotros</a></li>
+                <li><a class="dropdown-item" href="./pages/ayuda.html">Ayuda</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-        <nav>
-            <ul class="df-ul">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="./pages/productos.html">Productos</a></li>
-                <li><a href="./pages/quienes-somos.html">Nosotros</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-                <li><a href="./pages/ayuda.html">Ayuda</a></li>
-            </ul>
-        </nav>
+      </div>
+    </nav>
     </header>
 
     <main>
-        <div class="cardindex d-flex justify-content-center align-items-center">
+      <div class="cardindex d-flex justify-content-center align-items-center">
 
     </main>
 
     <footer class="bg-footer">
-        <p class="type-white">Realizado <i class="fas fa-wand-magic vara"></i> por Nahuel Botaro</p>
-        <div class="redes">
-            <a href="https://www.instagram.com/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://twitter.com/?lang=es" target="_blank">
-                <i class="fab fa-twitter"></i>
-            </a>
-        </div>
+      <p class="type-white">Realizado <i class="fas fa-wand-magic vara"></i> por Nahuel Botaro</p>
+      <div class="redes">
+        <a href="https://www.instagram.com/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/?lang=es" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
 
     </footer>
     <script src="https://kit.fontawesome.com/a954ad0397.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
