--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/logo1.jpeg" type="image/x-icon">
     <title>Ayuda</title>
@@ -17,19 +19,40 @@
 
 <body>
     <header class="df-header">
-        <div class="logo">
-            <img class="logo-img" src="../img/logo1.jpeg">
-            <p class="CodoACodo"> Mobile Stop </p>
-        </div>
-        <nav>
-            <ul class="df-ul">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="servicios.html">Productos</a></li>
-                <li><a href="quienes-somos.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="ayuda.html">Ayuda</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./index.html">
+                <img class="logo-img" src="../img/logo1.jpeg" alt="logo de celular con fondo amarillo" width="150px" height="100px">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Ver mas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="quienes-somos.html">Sobre nosotros</a></li>
+                      <li><a class="dropdown-item" href="ayuda.html">Ayuda</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main>
@@ -51,7 +74,10 @@
         </div>
 
     </footer>
-
+    <script src="https://kit.fontawesome.com/a954ad0397.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
