--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/logo1.jpeg" type="image/x-icon">
     <title>Contacto</title>
@@ -13,24 +15,101 @@
 
 <body>
     <header class="df-header">
-        <div class="logo">
-            <img class="logo-img" src="/img/logo1.jpeg">
-            <p class="CodoACodo"> Mobile Stop </p>
-        </div>
-        <nav>
-            <ul class="df-ul">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="quienes-somos.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="ayuda.html">Ayuda</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">
+                    <img class="logo-img" src="../img/logo1.jpeg" alt="logo de celular con fondo amarillo" width="150px"
+                        height="100px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Ver mas
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="quienes-somos.html">Sobre nosotros</a>
+                                </li>
+                                <li><a class="dropdown-item" href="ayuda.html">Ayuda</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
 
-    <main>
+    <main class="m-main">
+        <section class="contacto">
+            <div class="contenido">
+                <h2>Contactanos</h2>
+                <p>Si queres saber mas sobre nosotros o nuestros productos</p>
+            </div>
+            <div class="contenedor">
+                <div class="contactinfo">
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="text">
+                            <h3>Ubicacion</h3>
+                            <p>Alchidai Sa, 836, 3, 6, Cerrito, Buenos Aires</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                        <div class="text">
+                            <h3>Telefono</h3>
+                            <p>000-000-000</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="text">
+                            <h3>Email</h3>
+                            <p>vifoh84775@carpetra.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactform">
+                    <form>
+                        <h2>
+                            Enviar Mensaje
+                        </h2>
+                        <div class="inputbox">
+                            <input type="text" name="" required="required">
+                            <span> Nombre completo</span>
+                        </div>
+                        <div class="inputbox">
+                            <input type="text" name="" required="required">
+                            <span>Email</span>
+                        </div>
+                        <div class="inputbox">
+                            <textarea required="required"></textarea>
+                            <span>Escribe tu mensaje</span>
+                        </div>
+                        <div class="inputbox">
+                            <input type="submit" name="" value="Send">
+                        </div>
+                    </form>
+                </div>
+            </div>
 
+        </section>
     </main>
     <footer class="bg-footer">
         <p class="type-white">Realizado <i class="fas fa-wand-magic vara"></i> por Nahuel Botaro</p>
@@ -48,6 +127,9 @@
 
     </footer>
     <script src="https://kit.fontawesome.com/a954ad0397.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
